# gems-and-souls

./: .gitignore  .gitmodules  CLAUDE.md  GemsAndSoulsGame.gdextension  GemsAndSoulsGame.gdextension.uid  export_presets.cfg  icon.svg.import  license.md  project.godot  readme.md
.claude/: settings.local.json
.claude/agent-memory/game-dev-expert/: MEMORY.md
.claude/agents/: game-dev-expert.md  godot-cpp-tech-lead.md
.claude/commands/: gdd.md
.claude/skills/: gdd.md
cpp/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/RebelFramework/: CMakeLists.txt
cpp/RebelFramework/include/Rebel/: Core.hpp
cpp/RebelFramework/include/Rebel/Ability/: Ability.hpp  AbilityImprovement.hpp  AbilityNode.hpp  AbilityScriptContainerNode.hpp  AbilityTree.hpp
cpp/RebelFramework/include/Rebel/CharacterBody/: BaseCharacterBody3D.hpp  PlatformerCharacterBody3D.hpp  PlayerPlatformerCharacterBody3D.hpp  PlayerTopDownCharacterBody3D.hpp  TopDownCharacterBody3D.hpp
cpp/RebelFramework/src/: BaseCharacterBody3D.cpp  Framework.cpp  PlatformerCharacterBody3D.cpp  PlayerPlatformerCharacterBody3D.cpp  PlayerTopDownCharacterBody3D.cpp  TopDownCharacterBody3D.cpp
cpp/RebelFramework/src/Ability/: Ability.cpp  AbilityImprovement.cpp  AbilityNode.cpp  AbilityScriptContainerNode.cpp  AbilityTree.cpp
cpp/src/: register_types.cpp  register_types.hpp
cpp/src/Game/: HeroPlayer.cpp  HeroPlayer.hpp
documentation/: game-design-document.md  readme.md  roadmap.md
game/materials/prototyping/: mat_prototyping_base.tres
game/materials/prototyping/kenney_prototype-textures/PNG/Dark/: texture_01.png.import  texture_02.png.import  texture_03.png.import  texture_04.png.import  texture_05.png.import  texture_06.png.import  texture_07.png.import  texture_08.png.import  texture_09.png.import  texture_10.png.import  texture_11.png.import  texture_12.png.import  texture_13.png.import
game/materials/prototyping/kenney_prototype-textures/PNG/Green/: texture_01.png.import  texture_02.png.import  texture_03.png.import  texture_04.png.import  texture_05.png.import  texture_06.png.import  texture_07.png.import  texture_08.png.import  texture_09.png.import  texture_10.png.import  texture_11.png.import  texture_12.png.import  texture_13.png.import
game/meshlibs/environment/forest/color1/: meshlib_scene_forest_color1.tscn
game/models/animations/Libraries/: anim_lib_player.res
game/models/characters/Kaykit/characters/hiker/: Hiker.glb  (+2 more)
game/models/characters/kaykit_mistery/: License.txt
game/models/foot/: Candycane.gltf  Candycane.gltf.import  Mushroom.gltf  Mushroom.gltf.import
game/models/objects/: Basket.gltf  Basket.gltf.import  Basket_Mushrooms.gltf  Basket_Mushrooms.gltf.import  BlackKnight_Shield.gltf  BlackKnight_Shield.gltf.import  BlackKnight_Shield_Large.gltf  BlackKnight_Shield_Large.gltf.import  BlackKnight_Sword.gltf  BlackKnight_Sword.gltf.import  BlackKnight_Sword_Large.gltf  BlackKnight_Sword_Large.gltf.import  Broom.gltf  Broom.gltf.import  Campfire_Base.gltf  Campfire_Base.gltf.import  Campfire_Logs.gltf  Campfire_Logs.gltf.import  Cauldron.gltf  Cauldron.gltf.import  Caveman_Axe.gltf  Caveman_Axe.gltf.import  Caveman_Club.gltf  Caveman_Club.gltf.import  Caveman_Spear.gltf  Caveman_Spear.gltf.import  CombatMech_Axe.gltf.import  CombatMech_Minigun.gltf.import  Drawers.gltf  Drawers.gltf.import  FrostGolem_Axe.gltf  FrostGolem_Axe.gltf.import  FrostGolem_Axe_Large.gltf  FrostGolem_Axe_Large.gltf.import  Gem_Large.gltf  Gem_Large.gltf.import  Gem_Medium.gltf  Gem_Medium.gltf.import  Gem_Small.gltf  Gem_Small.gltf.import  (+40 more)
game/scenes/characters/hero/: hero.tscn
game/scenes/characters/hero/abilities/: dash.tres
game/scenes/levels/: level_prototyping.tscn
game/scenes/levels/Forest/: map_forest_start.tscn
icons/: PlatformCharacterBody3D.svg.import
(+3476 files in other folders)
